--- a/modal.css
+++ b/modal.css
@@ -12,7 +12,7 @@ body, html{
   background-color: rgba(0, 0, 0, 0.5);(0, 0, 0);
 }
 
-.modal_box{
+#modal_box{
   margin:0 auto;
   height:50%;
   width:40%;
